--- a/index.html
+++ b/index.html
@@ -7,42 +7,39 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body class="alert">
+  <body>
     <header>
-      <h1 class="judul">Alarm Digital</h1>
+      <h1 class="judul">ALARM DIGITAL</h1>
       <a class="donate" href="donasi.html">Donate Me</a>
     </header>
     <div class="container">
       <!-- jam realtime -->
       <div class="realtime">
         <div class="date">
-          <span id="date"></span> - 
-          <span id="month"></span> -
+          <span id="date"></span> - <span id="month"></span> -
           <span id="year"></span>
         </div>
-
         <div class="hour">
-          <span id="hour"></span> : 
-          <span id="minute"></span> :
+          <span id="hour"></span> : <span id="minute"></span> :
           <span id="second"></span>
           <span id="am"></span>
         </div>
       </div>
-
       <div class="alarm">
-
-        <!-- untuk user setting alarm -->
-
-        <div class="alarm-set" id="time-set">
-          <input type="time" id="alarm-set" />
+        <div class="alarm-activated">
+          <!-- untuk user setting alarm -->
+          <div class="alarm-set" id="time-set">
+            <input type="time" id="alarm-set" />
+          </div>
+          <!-- tombol untuk on/off alarm -->
+          <div class="alarm-button">
+            <input type="checkbox" id="toggle-on/off" />
+            <span class="konten"></span>
+          </div>
         </div>
-
-        <!-- tombol untuk on/off alarm -->
-        <div class="alarm-button">
-          <input type="checkbox" id="toggle-on/off" />
-          <span class="konten"></span>
+        <div>
+          <button class="reset-btn" type="reset" id="reset-btn">Reset</button>
         </div>
-        <button class="reset-btn" type="reset" id="reset-btn">Reset</button>
       </div>
     </div>
   </body>
